Url assets fixed

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
     <h1>Actualizado</h1>
     <p>Cada 10 segundos</p>
   </div>
-  <img class="left-texture" src="/assets/img/bannertexture.png" alt="">
-  <img class="right-texture" src="/assets/img/bannertextureright.png" alt="">
+  <img class="left-texture" src="https://github.com/andyfrontend/cryptofy/dist/assets/img/bannertexture.png" alt="">
+  <img class="right-texture" src="https://github.com/andyfrontend/cryptofy/dist/assets/img/bannertextureright.png" alt="">
 </div>
 <app-currencies></app-currencies>
