--- a/src/app/components/currencies/currencies.component.html
+++ b/src/app/components/currencies/currencies.component.html
@@ -9,7 +9,7 @@
     <div class="col-md-6 col-lg-4 mb-4" *ngFor="let currency of currencies">
       <div class="currency-content">
         <div class="currency-name">
-          <img src="http://ocio.com.do/wp-content/currency/{{currency.symbol | lowercase}}.png" alt="">
+          <img src="./assets/img/currency/{{currency.symbol | lowercase}}.png" alt="">
           <div class="ml-2">
             <h4>{{currency.symbol | uppercase}}</h4>
             <p>{{currency.name}}</p>
